[package]
name = "dungeondb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["packages/chest", "packages/errors", "packages/query", "packages/runner"]

[workspace.dependencies]
errors = {path = "packages/errors"}
query = {path = "packages/query"}
chest = {path = "packages/chest"}
