[package]
name = "dungeondb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["packages/chest", "packages/errors", "packages/grimoire", "packages/query", "packages/runner", "packages/server"]

[workspace.dependencies]
errors = {path = "packages/errors"}
query = {path = "packages/query"}
chest = {path = "packages/chest"}
grimoire = {path = "packages/grimoire"}
runner = {path = "packages/runner"}
