[package]
name = "dungeondb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
  "packages/chest",
  "packages/cli",
  "packages/client",
  "packages/errors",
  "packages/grimoire",
  "packages/query",
  "packages/runner",
  "packages/server",
  "packages/server-value"
]

[workspace.dependencies]
errors = {path = "packages/errors"}
query = {path = "packages/query"}
chest = {path = "packages/chest"}
grimoire = {path = "packages/grimoire"}
runner = {path = "packages/runner"}
server = {path = "packages/server"}
client = {path = "packages/client"}
tokio = { version = "1.37.0", features = ["full"] }
server-value = {path = "packages/server-value"}
